Completed searchbar and responsivenes design

--- a/src/common/Components/Sidebar/Sidebar.module.scss
+++ b/src/common/Components/Sidebar/Sidebar.module.scss
@@ -7,3 +7,10 @@
     padding: 20px;
     box-sizing: border-box;
 }
+
+@media (min-width: 768px){
+    .SidebarContainer{
+        width: 10%;
+    }
+
+}
