--- a/src/App.scss
+++ b/src/App.scss
@@ -17,9 +17,10 @@ button {
   color: grey;
   padding: 0.25rem;
   background: transparent;
+  font-weight: lighter;
   cursor: pointer;
   transition: ease-out 0.5s;
-  border: 2px solid grey;
+  border: 1px solid grey;
   border-radius: 0.25rem;
   box-shadow: inset 0 0 0 0 grey;
 }
