--- a/src/modules/Dashboard/Components/DashboardTable/DashboardTable.module.scss
+++ b/src/modules/Dashboard/Components/DashboardTable/DashboardTable.module.scss
@@ -25,7 +25,7 @@
     position: sticky;
     color:grey;
     top: 0;
-    :first-child {
+    .FrozenCell {
       top: 0;
       border-bottom: 1px solid #e0e0e0;
       max-width: 10rem;
@@ -49,7 +49,7 @@
 .TableBody {
   font-size: 12px;
   .TableRow {
-    :first-child {
+    .FrozenCell {
       min-width: 10rem;
       max-width: 10rem;
       position: sticky;
@@ -67,6 +67,7 @@
     .CellText {
       display: flex;
       align-items: center;
+      gap: 1rem;
     }
   }
 }
@@ -74,7 +75,7 @@
 @media (max-width:600px){
   .TableHeaders{
   .TableHeader {
-    :first-child {
+    .FrozenCell {
       min-width: 5rem;
       max-width: 5rem;
       box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
@@ -82,7 +83,7 @@
   }}
   .TableBody {
     .TableRow {
-      :first-child {
+      .FrozenCell{
         min-width: 5rem;
         max-width: 5rem;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
