--- a/src/modules/Dashboard/Components/CompanyEditForm/CompanyEditForm.module.scss
+++ b/src/modules/Dashboard/Components/CompanyEditForm/CompanyEditForm.module.scss
@@ -17,7 +17,7 @@
     border-radius: 0.5rem;
 
     &:disabled {
-      background: lightgray;
+      background: #ebebeb;
       color: black;
       pointer-events: none;
 
